recursion.hanoi.lessons.recursion.hanoi.SplitHanoi1.scala.error
SplitHanoi1:4: error: not found: value dst
    hanoiPair(height-1, src, dst, other)
                             ^SplitHanoi1:5: error: not found: value dst
    deplace(src, dst)
                 ^SplitHanoi1:6: error: not found: value dst
    deplace(src, dst)
                 ^SplitHanoi1:7: error: not found: value dst
    hanoiPair(height-1, other, src, dst)
                                    ^